default layout include dynamic title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Blogging With Jekyll and Github</title>
+    <title>{{ page.title }}</title>
 </head>
 
 <body>
-    <h1>Blogging With Jekyll and Github</h1>
-
+    <h1>{{ page.title }}</h1>
+    {{ content }}
 </body>
 </html>
