--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="http://localhost/files/css/style.css" type="text/css" />
+    
 </head>
 
 <body>
