--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="http://localhost/files/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="files/css/style.css" type="text/css" />
     
 </head>
 
