--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,20 @@
 <html>
 <head>
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="files/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
     
 </head>
 
 <body>
-    <h1>{{ page.title }}</h1>
-    {{ content }}
+    <header>
+        <h1>{{ page.title }}</h1>
+    </header>
+    <nav>
+    </nav>
+    <section>
+        {{ content }}
+    </section>
+    <footer>
+    </footer>
 </body>
 </html>
