--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 <article>
     <header>
         <a href="{{ page.url }}" rel="bookmark" title="{{ page.title }}"><h1>{{ page.title }}</h1></a>
-        <h2>Author's name</h2>
+        <h2>{{ page.author }}</h2>
         <p>Published <time pubdate datetime="{{ page.date | date_to_string }}">{{ page.date | date_to_string }}</time>.</p>
     </header>
         {{ content }}
