--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,8 @@ body {
     font-family: Georgia, Times, serif;
     font-size: 15px;
 }
+
+#author {
+    font-weight: normal;
+    font-size: 12px;
+}
