--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
 <body>
     <header>
-        <h1>{{ page.title }}</h1>
+        <h1>Blog de @denisjacquemin</h1>
     </header>
     <nav>
     </nav>
