--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 <article>
     <header>
         <a href="{{ page.url }}" rel="bookmark" title="{{ page.title }}"><h1>{{ page.title }}</h1></a>
