html5 boilerplate integration

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,7 @@ layout: default
 <article>
     <header>
         <a href="{{ page.url }}" rel="bookmark" title="{{ page.title }}"><h1>{{ page.title }}</h1></a>
-        <h2 id="author">{{ page.author }}</h2>
-        <p>Published <time pubdate datetime="{{ page.date | date_to_string }}">{{ page.date | date_to_string }}</time>.</p>
+        <p>Published <time pubdate datetime="{{ page.date | date_to_string }}">{{ page.date | date_to_string }}</time> by {{ page.author }}</p>
     </header>
         {{ content }}
     <footer>
