footer connect added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,11 @@
         {{ content }}
     </section>
     <footer>
+        <ul class="connect">
+            <li class="connect-item"><a href="/feed"><img src="/images/feed.png" width="32" height="32" alt="Subscribe"></a></li>
+            <li class="connect-item"><a href="http://twitter.com/denisjacquemin"><img src="/images/twitter.png" width="32" height="32" alt="Twitter"></a></li>
+            <li class="connect-item"><a href="http://www.linkedin.com/in/denisjacquemin"><img src="/images/linkedin.png" width="32" height="32" alt="LinkedIn"></a></li>
+        </ul>
     </footer>
 
   <!-- JavaScript at the bottom for fast page loading -->
