--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,22 +35,27 @@
 </head>
 
 <body>
-
-    <header>
-        <h1>Blog de @denisjacquemin</h1>
-    </header>
-    <nav>
-    </nav>
-    <section>
-        {{ content }}
-    </section>
-    <footer>
-        <ul class="connect">
-            <li class="connect-item"><a href="/feed"><img src="/images/feed.png" width="32" height="32" alt="Subscribe"></a></li>
-            <li class="connect-item"><a href="http://twitter.com/denisjacquemin"><img src="/images/twitter.png" width="32" height="32" alt="Twitter"></a></li>
-            <li class="connect-item"><a href="http://www.linkedin.com/in/denisjacquemin"><img src="/images/linkedin.png" width="32" height="32" alt="LinkedIn"></a></li>
-        </ul>
-    </footer>
+    <div id="container">
+        <header>
+            <h1>Blog de @denisjacquemin</h1>
+        </header>
+        <nav>
+            <ul>
+                <li>link 1</li>
+                <li>link 2</li>
+            </ul>
+        </nav>
+        <section>
+            {{ content }}
+        </section>
+        <footer>
+            <ul class="connect">
+                <li class="connect-item"><a href="/feed"><img src="/images/feed.png" width="32" height="32" alt="Subscribe"></a></li>
+                <li class="connect-item"><a href="http://twitter.com/denisjacquemin"><img src="/images/twitter.png" width="32" height="32" alt="Twitter"></a></li>
+                <li class="connect-item"><a href="http://www.linkedin.com/pub/denis-jacquemin/7/b2b/329"><img src="/images/linkedin.png" width="32" height="32" alt="LinkedIn"></a></li>
+            </ul>
+        </footer>
+    </div>
 
   <!-- JavaScript at the bottom for fast page loading -->
 
