--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,24 @@ a:hover { color: #036; }
      font-size: 15px;
  }
 
+ #container {
+     width: 930px;
+     margin: 0 auto;
+     line-height: 20px;
+     text-shadow: 0px 1px white;
+     padding: 0 15px;
+ }
+
+ section {
+     float: left;
+     width: 542px;
+ }
+ nav {
+     float: right;
+      width: 280px;
+ }
+ 
+ 
 /**
  * Non-semantic helper classes: please define your styles before this section.
  */
