--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
 
   <!-- CSS: implied media="all" -->
   <link rel="stylesheet" href="/css/style.css?v=2">
+  <link rel="stylesheet" href="/css/handheld.css" media="hand">
 
   <!-- Uncomment if you are specifically targeting less enabled mobile browsers
   <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
