--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
 </head>
 
 <body>
+    <div id="top"></div>
     <div id="container">
         <header>
             <h1>@denisjacquemin's blog</h1>
