atom feed added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,8 @@
 
   <title>{{ page.title }}</title>
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Tom Preston-Werner" />
+  <link href="http://feeds.feedburner.com/denisjacquemin" rel="alternate" title="Denis Jacquemin" type="application/atom+xml" />
 
   <!-- Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
