feed link updated on feed icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
                 <li>link 2</li>
             </ul>
             <ul class="connect">
-                <li class="connect-item"><a href="/feed"><img src="/images/feed.png" width="32" height="32" alt="Subscribe"></a></li>
+                <li class="connect-item"><a href="http://feeds.feedburner.com/denisjacquemin"><img src="/images/feed.png" width="32" height="32" alt="Subscribe"></a></li>
                 <li class="connect-item"><a href="http://twitter.com/denisjacquemin"><img src="/images/twitter.png" width="32" height="32" alt="Twitter"></a></li>
                 <li class="connect-item"><a href="http://www.linkedin.com/pub/denis-jacquemin/7/b2b/329"><img src="/images/linkedin.png" width="32" height="32" alt="LinkedIn"></a></li>
             </ul>
