styling index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
     <div id="top"></div>
     <div id="container">
         <header>
-            <h1>@denisjacquemin's blog</h1>
+            <a class="extra" href="/"><h1>@denisjacquemin's blog <span class="home">home</span></h1></a>
         </header>
         <nav>
             <!--
