styling index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,15 +40,9 @@
     <div id="top"></div>
     <div id="container">
         <header>
-            <a class="extra" href="/"><h1>@denisjacquemin's blog <span class="home">home</span></h1></a>
+            <a class="extra" href="/"><h1>@denisjacquemin's blog &raquo; home</h1></a>
         </header>
         <nav>
-            <!--
-            <ul>
-                <li>link 1</li>
-                <li>link 2</li>
-            </ul>
-            -->
             <p><a href="http://feeds.feedburner.com/denisjacquemin"><img src="http://feeds.feedburner.com/~fc/denisjacquemin?bg=F1EEE0&amp;fg=444444&amp;anim=1" height="26" width="88" style="border:0" alt="" /></a></p>
             <ul class="connect">
                 <li class="connect-item"><a href="http://feeds.feedburner.com/denisjacquemin"><img src="/images/feed.png" width="32" height="32" alt="Subscribe"></a></li>
