style.css only for screen media

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 
 
   <!-- CSS: implied media="all" -->
-  <link rel="stylesheet" href="/css/style.css?v=2">
+  <link rel="stylesheet" href="/css/style.css?v=2" media="screen">
   <link rel="stylesheet" href="/css/handheld.css" media="hand">
 
   <!-- Uncomment if you are specifically targeting less enabled mobile browsers
