--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 
   <!-- CSS: implied media="all" -->
   <link rel="stylesheet" href="/css/style.css?v=2" media="screen">
-  <link rel="stylesheet" href="/css/handheld.css" media="hand">
+  <link rel="stylesheet" href="/css/handheld.css" media="handheld">
 
   <!-- Uncomment if you are specifically targeting less enabled mobile browsers
   <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
