--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,16 +23,12 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-
-  <!-- CSS: implied media="all" -->
   <link rel="stylesheet" href="/css/style.css?v=2" media="screen">
-  <link rel="stylesheet" href="/css/handheld.css" media="handheld">
+  <link rel="stylesheet" href="/css/handheld.css?v=2" media="handheld">
 
-  <!-- Uncomment if you are specifically targeting less enabled mobile browsers
-  <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
-
-  <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
+  <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects 
   <script src="/js/libs/modernizr-1.7.min.js"></script>
+  -->
 
 </head>
 
