--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ a:hover { color: #036; }
  *
  * Author: Denis Jacquemin
  */
-
+@media only screen and (max-device-width: 480px) {
  html {
      background: #F1EEE0 url('../images/body-bg.jpg');
      height: 100%;
@@ -237,7 +237,7 @@ a:hover { color: #036; }
  nav .powered {
      font-size: 12px;
  }
- 
+} 
 /**
  * Non-semantic helper classes: please define your styles before this section.
  */
