--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,7 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <link rel="stylesheet" href="/css/style.css?v=2" media="screen all and (min-device-width: 481px) and (orientation:portrait)">
-  <link rel="stylesheet" href="/css/handheld.css?v=2" media="handheld all and (max-device-width: 480px)">
+  <link rel="stylesheet" href="/css/style.css?v=2" media="all">
 
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects 
   <script src="/js/libs/modernizr-1.7.min.js"></script>
