--- a/pygments/css/style.css
+++ b/pygments/css/style.css
@@ -239,6 +239,17 @@
        font-size: 12px;
    }
    
+   .code {
+       border: 1px solid silver;
+       margin: 0 0 1.5em 0;
+       overflow: hidden;
+       width: 590px;
+   }
+   
+   code {
+       white-space: pre;
+   }
+   
   /**
    * Non-semantic helper classes: please define your styles before this section.
    */
