--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,22 +35,23 @@
     <div id="top"></div>
     <div id="container">
         <header>
-            <a href="/"><h1>@denisjacquemin's blog &raquo; home</h1></a>
+            <div class="left">
+                <a href="/"><h1>@denisjacquemin's blog &raquo; home</h1></a>
+            </div>
+            <div class="right">
+                <p><a href="http://feeds.feedburner.com/denisjacquemin"><img src="http://feeds.feedburner.com/~fc/denisjacquemin?bg=F1EEE0&amp;fg=444444&amp;anim=1" height="26" width="88" style="border:0" alt="" /></a></p>
+                <ul class="connect">
+                    <li class="connect-item"><a href="http://feeds.feedburner.com/denisjacquemin"><img src="/images/feed.png" width="32" height="32" alt="Subscribe"></a></li>
+                    <li class="connect-item"><a href="http://twitter.com/denisjacquemin"><img src="/images/twitter.png" width="32" height="32" alt="Twitter"></a></li>
+                    <li class="connect-item"><a href="http://www.linkedin.com/pub/denis-jacquemin/7/b2b/329"><img src="/images/linkedin.png" width="32" height="32" alt="LinkedIn"></a></li>
+                </ul>
+            </div>
         </header>
         <section>
             {{ content }}
         </section>
-        <nav>
-            <p><a href="http://feeds.feedburner.com/denisjacquemin"><img src="http://feeds.feedburner.com/~fc/denisjacquemin?bg=F1EEE0&amp;fg=444444&amp;anim=1" height="26" width="88" style="border:0" alt="" /></a></p>
-            <ul class="connect">
-                <li class="connect-item"><a href="http://feeds.feedburner.com/denisjacquemin"><img src="/images/feed.png" width="32" height="32" alt="Subscribe"></a></li>
-                <li class="connect-item"><a href="http://twitter.com/denisjacquemin"><img src="/images/twitter.png" width="32" height="32" alt="Twitter"></a></li>
-                <li class="connect-item"><a href="http://www.linkedin.com/pub/denis-jacquemin/7/b2b/329"><img src="/images/linkedin.png" width="32" height="32" alt="LinkedIn"></a></li>
-            </ul>
-            <p class="powered">powered by <a href="http://jekyllrb.com/">Jekyll</a></p>
-        </nav>
         <footer>
-            
+            <p class="powered">powered by <a href="http://jekyllrb.com/">Jekyll</a></p>
         </footer>
     </div>
 
