--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
        
         var disqus_shortname = 'denisjacqueminsblog';
         var disqus_identifier = '{{ page.url }}';
-        var disqus_url = '{{ page.url }}';
+        var disqus_url = 'http://denisjacquemin.github.com' + '{{ page.url }}';
 
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
