--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,9 @@
    footer {
        display: block;
        clear: both;
+       margin: 30px 0;
+       text-align: right;
+       font-size: 12px;
    }
    
    article header a h1 {
