--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,93 +1,69 @@
 <!doctype html>
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7 ]> <html class="no-js ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]>    <html class="no-js ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]>    <html class="no-js ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
-
-  <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-       Remove this if you use the .htaccess -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <title>{{ page.title }}</title>
-  <meta name="description" content="">
-  <meta name="author" content="Tom Preston-Werner" />
-  <link href="http://feeds.feedburner.com/denisjacquemin" rel="alternate" title="Denis Jacquemin" type="application/atom+xml" />
-
-  <!-- Mobile viewport optimized: j.mp/bplateviewport -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Place favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
-  <link rel="stylesheet" href="/css/style.css?v=2" media="all">
-
-  <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects 
-  <script src="/js/libs/modernizr-1.7.min.js"></script>
-  -->
-
+    <meta charset="utf-8" />
+	<title>{{ page.title }}</title>
+	<meta name="description" content="@denisjacquemin's blog">
+	<meta name="author" content="Denis Jacquemin">
+	<link href="http://feeds.feedburner.com/denisjacquemin" rel="alternate" title="Denis Jacquemin" type="application/atom+xml" />
+	<!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" /> 
+	<link rel="stylesheet" href="/css/base.css">
+	<link rel="stylesheet" href="/css/skeleton.css">
+	<link rel="stylesheet" href="/css/layout.css">
+	<link rel="stylesheet" href="/css/syntax.css">
+	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
 </head>
 
 <body>
-    <div id="top"></div>
-    <div id="container">
-        <header>
-            <div class="left">
-                <a href="/"><h1>@denisjacquemin's blog &raquo; home</h1></a>
-            </div>
-            <div class="right">
-                <p><a href="http://feeds.feedburner.com/denisjacquemin"><img src="http://feeds.feedburner.com/~fc/denisjacquemin?bg=F1EEE0&amp;fg=444444&amp;anim=1" height="26" width="88" style="border:0" alt="" /></a></p>
-                <ul class="connect">
+    <div class="container">	
+        <header class="sixteen columns">
+			<div class="twelve columns alpha" id="title">
+			    <a href="/"><h1 class="remove-bottom">@denisjacquemin's blog<span id="home"> &raquo; home</span></h1> </a>
+			</div>
+			<div class="four columns omega" id="connect">
+			    <ul>
                     <li class="connect-item"><a href="http://feeds.feedburner.com/denisjacquemin"><img src="/images/feed.png" width="32" height="32" alt="Subscribe"></a></li>
                     <li class="connect-item"><a href="http://twitter.com/denisjacquemin"><img src="/images/twitter.png" width="32" height="32" alt="Twitter"></a></li>
                     <li class="connect-item"><a href="http://www.linkedin.com/pub/denis-jacquemin/7/b2b/329"><img src="/images/linkedin.png" width="32" height="32" alt="LinkedIn"></a></li>
                 </ul>
-            </div>
-        </header>
-        <section>
+			</div>
+			
+			<hr />
+		</header>
+		<section class="sixteen columns">
             {{ content }}
         </section>
-        <footer>
-            <p class="powered">powered by <a href="http://jekyllrb.com/">Jekyll</a></p>
+		<footer class="sixteen columns">
+		    <p><a href="http://feeds.feedburner.com/denisjacquemin"><img src="http://feeds.feedburner.com/~fc/denisjacquemin?bg=F1EEE0&amp;fg=444444&amp;anim=1" height="26" width="88" style="border:0" alt="" /></a>
+            powered by <a href="http://jekyllrb.com/">Jekyll</a></p>
         </footer>
     </div>
-
-  <!-- JavaScript at the bottom for fast page loading -->
-
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
-  <script>window.jQuery || document.write("<script src='/js/libs/jquery-1.5.1.min.js'>\x3C/script>")</script>  
-
-  <!-- scripts concatenated and minified via ant build script-->
-  <script src="/js/script.js"></script>
-<!--
-  <script src="/js/plugins.js"></script>
-  <script src="/js/script.js"></script>
--->
-  <!-- end scripts-->
-
-
-  <!--[if lt IE 7 ]>
-    <script src="js/libs/dd_belatedpng.js"></script>
-    <script>DD_belatedPNG.fix("img, .png_bg"); // Fix any <img> or .png_bg bg-images. Also, please read goo.gl/mZiyb </script>
-  <![endif]-->
-
-
-  <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-XXXXX-X to be your site's ID -->
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-24495058-1']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
+	<script>window.jQuery || document.write("<script src='javascripts/jquery-1.5.1.min.js'>\x3C/script>")</script>
+	<script src="/js/script.js"></script>
+	<script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-24495058-1']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
+    <!--[if lt IE 7 ]>
+      <script src="/js/libs/dd_belatedpng.js"></script>
+      <script>DD_belatedPNG.fix("img, .png_bg");</script>
+    <![endif]-->
 
 </body>
 </html>
