--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,14 +37,14 @@
                 </ul>
 			</div>
 			
-			<hr />
+			<hr class="large"/>
 		</header>
 		<section class="sixteen columns">
             {{ content }}
         </section>
 		<footer class="sixteen columns">
 		    <p><a href="http://feeds.feedburner.com/denisjacquemin"><img src="http://feeds.feedburner.com/~fc/denisjacquemin?bg=F1EEE0&amp;fg=444444&amp;anim=1" height="26" width="88" style="border:0" alt="" /></a>
-            powered by <a href="http://jekyllrb.com/">Jekyll</a></p>
+            powered by <a href="http://jekyllrb.com/">Jekyll</a> and <a href="http://www.getskeleton.com/">skeleton</a></p>
         </footer>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
