--- a/css/layout.css
+++ b/css/layout.css
@@ -17,6 +17,15 @@
 /* #Site Styles
 ================================================== */
 
+    html { overflow-y: scroll; }
+    
+    hr.large {
+        background: none repeat scroll 0 0 #EBEBEB;
+        border: medium none;
+        height: 8px;
+        margin: 0 0 20px 0;
+    }
+
     .container > header {
         padding: 40px 0 0 0;
     }
