some styles tunning

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     <div class="container">	
         <header class="sixteen columns">
 			<div class="twelve columns alpha" id="title">
-			    <a href="/"><h1 class="remove-bottom"><span id="blog-title">@denisjacquemin's blog</span><span id="home"> &raquo; home</span></h1> </a>
+			    <h1 class="remove-bottom"><a href="/"><span id="blog-title">@denisjacquemin's blog</span><span id="home"> &raquo; home</span></a></h1> 
 			</div>
 			<div class="four columns omega" id="connect">
 			    <ul>
