--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <article>
     <header>
-        <a href="{{ page.url }}" rel="bookmark" title="{{ page.title }}"><h2>{{ page.title }}</h2></a>
+        <h2><a href="{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a></h2>
         <p class="post-meta">Published <time pubdate datetime="{{ page.date | date_to_string }}">{{ page.date | date_to_string }}</time> by {{ page.author }}</p>
         <hr>
     </header>
