--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,13 +43,15 @@
             {{ content }}
         </section>
 		<footer class="sixteen columns">
-		    <p><a href="http://feeds.feedburner.com/denisjacquemin"><img src="http://feeds.feedburner.com/~fc/denisjacquemin?bg=F1EEE0&amp;fg=444444&amp;anim=1" height="26" width="88" style="border:0" alt="" /></a>
+		    <p><!--><a href="http://feeds.feedburner.com/denisjacquemin"><img src="http://feeds.feedburner.com/~fc/denisjacquemin?bg=F1EEE0&amp;fg=444444&amp;anim=1" height="26" width="88" style="border:0" alt="" />--></a>
             powered by <a href="http://jekyllrb.com/">Jekyll</a> and <a href="http://www.getskeleton.com/">skeleton</a></p>
         </footer>
     </div>
+<!--    
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
 	<script>window.jQuery || document.write("<script src='javascripts/jquery-1.5.1.min.js'>\x3C/script>")</script>
 	<script src="/js/script.js"></script>
+-->	
 	<script type="text/javascript">
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-24495058-1']);
