footer layout fix

--- a/css/layout.css
+++ b/css/layout.css
@@ -77,6 +77,11 @@
         padding: 5px;
     }
     
+    footer {
+        text-align:right;
+        font-size: 12px;
+    }
+    
     
 /* #Page Styles
 ================================================== */
