--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,8 +42,9 @@
 		<section class="sixteen columns">
             {{ content }}
         </section>
+		<hr class="large"/>
 		<footer class="sixteen columns">
-		    <p><!--><a href="http://feeds.feedburner.com/denisjacquemin"><img src="http://feeds.feedburner.com/~fc/denisjacquemin?bg=F1EEE0&amp;fg=444444&amp;anim=1" height="26" width="88" style="border:0" alt="" />--></a>
+		    <p><!--<a href="http://feeds.feedburner.com/denisjacquemin"><img src="http://feeds.feedburner.com/~fc/denisjacquemin?bg=F1EEE0&amp;fg=444444&amp;anim=1" height="26" width="88" style="border:0" alt="" />--></a>
             powered by <a href="http://jekyllrb.com/">Jekyll</a> and <a href="http://www.getskeleton.com/">skeleton</a></p>
         </footer>
     </div>
