--- a/css/layout.css
+++ b/css/layout.css
@@ -115,6 +115,10 @@
           h3 {
               font-size:20px;
           }
+          
+          header ul {
+              margin-bottom: 0;
+          }
 	}
 	
 	/* Mobile Landscape/Browser */
